[package]
name = "app"
edition = "2021"
publish = false

[dependencies]
bincode = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
jito-protos = { path = "../jito_protos" }
solana-entry = { workspace = true }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "deshred"
path = "deshred.rs"